# craftcms

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  config.toml  flake.nix  retag.sh
.github/workflows/: build-and-release.yml  build.yml
assets/admin/: admin.html  admin_edit_image.html  admin_new_image.html  login.html
assets/admin/css/: admin.css  login.css
assets/admin/js/: admin.js
src/: admin_assets.rs  cli.rs  commands.rs  config.rs  database.rs  files.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  template_utils.rs  templates.rs
src/handlers/: mod.rs  site.rs
src/handlers/admin/: api.rs  mod.rs  render.rs
static/css/: style.css
templates/: home.html  post_detail.html  sidebar.html
