[package]
name = "craftcms"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Peterkins <stephen@peterkins.dev>"]
description = "A simple CMS for managing and serving templated HTML documents."
license = "MIT"
repository = "https://github.com/bearguy/craftcms"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26"
tera = "1.17"
clap = { version = "3.0", features = ["derive"] }
dotenv = "0.15"
toml = "0.8.19"
futures = "0.3"
bytes = "1.0"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
rpassword = "7.3.1"
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
chrono = "0.4.39"
rust-embed = "8.5.0"
warp-embed = "0.5.0"
lazy_static = "1.5.0"
atty = "0.2.14"
